fixinf font on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,6 @@ body {
     }
     
     .title {
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 }
